--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   ],
   "devDependencies": {
     "customize-cra": "^0.2.11",
+    "mobx-react-devtools": "^6.0.3",
     "react-app-rewired": "^2.1.0"
   }
 }
